// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Rubric component hides the score total when needed 1`] = `
"<div className=\\"react-rubric\\">
  <Table caption=\\"Point Rubric\\" hover={false} size=\\"medium\\">
    <thead>
      <tr>
        <th scope=\\"col\\">
          Criteria
        </th>
        <th scope=\\"col\\">
          Ratings
        </th>
        <th scope=\\"col\\">
          Pts
        </th>
      </tr>
    </thead>
    <tbody className=\\"criterions\\">
      <Criterion assessment={{...}} criterion={{...}} freeForm={false} onAssessmentChange={{...}} savedComments={{...}} />
      <Criterion assessment={{...}} criterion={{...}} freeForm={false} onAssessmentChange={{...}} savedComments={{...}} />
      <tr>
        <td colSpan=\\"3\\" className=\\"total-points\\" />
      </tr>
    </tbody>
  </Table>
</div>"
`;

exports[`the Rubric component renders as expected 1`] = `
"<div className=\\"react-rubric\\">
  <Table caption=\\"Point Rubric\\" hover={false} size=\\"medium\\">
    <thead>
      <tr>
        <th scope=\\"col\\">
          Criteria
        </th>
        <th scope=\\"col\\">
          Ratings
        </th>
        <th scope=\\"col\\">
          Pts
        </th>
      </tr>
    </thead>
    <tbody className=\\"criterions\\">
      <Criterion assessment={{...}} criterion={{...}} freeForm={false} onAssessmentChange={{...}} savedComments={{...}} />
      <Criterion assessment={{...}} criterion={{...}} freeForm={false} onAssessmentChange={{...}} savedComments={{...}} />
      <tr>
        <td colSpan=\\"3\\" className=\\"total-points\\">
          Total Points: 6.0
        </td>
      </tr>
    </tbody>
  </Table>
</div>"
`;

exports[`the Rubric component updates the total score when an individual criterion point assessment changes 1`] = `
"<div className=\\"react-rubric\\">
  <Table caption=\\"Point Rubric\\" hover={false} size=\\"medium\\">
    <thead>
      <tr>
        <th scope=\\"col\\">
          Criteria
        </th>
        <th scope=\\"col\\">
          Ratings
        </th>
        <th scope=\\"col\\">
          Pts
        </th>
      </tr>
    </thead>
    <tbody className=\\"criterions\\">
      <Criterion assessment={{...}} criterion={{...}} freeForm={false} onAssessmentChange={[Function]} savedComments={{...}} />
      <Criterion assessment={{...}} criterion={{...}} freeForm={false} onAssessmentChange={[Function]} savedComments={{...}} />
      <tr>
        <td colSpan=\\"3\\" className=\\"total-points\\">
          Total Points: 5 out of 11.0
        </td>
      </tr>
    </tbody>
  </Table>
</div>"
`;
